--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,27 +1,21 @@
-name: Test
+name: Docker Build CI
 
-on:
-  push:
-  pull_request:
-    types: [opened, synchronize]
+on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.6, 3.7, 3.8]
-      fail-fast: false
-    
     steps:
       - uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install FastAPI
-        run: pip install fastapi
-      - name: Install Uvicorn
-        run: pip install uvicorn
-      - name: Test
-        run: uvicorn main:app --reload
+      - name: Docker login
+        env: 
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}  
+          DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}  
+        run: |
+          docker login -u $DOCKER_USER -p $DOCKER_PASSWORD docker.io
+      - name: Docker build Python
+        run: |
+          docker build -t myimage .
+      - name: Docker run container
+        run: |
+          docker run -d --name mycontainer -p 5000:5000 myimage
